--- a/styles.scss
+++ b/styles.scss
@@ -97,51 +97,11 @@ h4 {
     width: 35px;
     height: 35px;
     margin-right: 11px;
-
-    img {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      object-fit: contain;
-      opacity: 1;
-      transition: opacity 0.5s ease;
-    }
-
+    border-radius: 50%;
     &:hover {
-      &::before {
-        content: '';
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background-repeat: no-repeat;
-        background-size: contain;
-        opacity: 1;
-        transition: opacity 0.5s ease;
-      }
-    }
-
-    &.google:hover::before {
-      background-image: url('images/google-hover.svg');
-    }
-
-    &.github:hover::before {
-      background-image: url('images/github-hover.svg');
-    }
-
-    &.fb:hover::before {  
-      background-image: url('images/fb-hover.svg');
-    }
-
-    &.vk:hover::before {
-      background-image: url('images/vk-hover.svg');
-    }
-    &:hover img {
-      opacity: 0;
-    }
+      filter: brightness(50%);
+      transition: 0.3s;
+    }    
   }
 }
 
