--- a/styles.css
+++ b/styles.css
@@ -107,46 +107,13 @@ h4 {
   width: 35px;
   height: 35px;
   margin-right: 11px;
+  border-radius: 50%;
 }
-.icons .social img {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  -o-object-fit: contain;
-     object-fit: contain;
-  opacity: 1;
-  -webkit-transition: opacity 0.5s ease;
-  transition: opacity 0.5s ease;
-}
-.icons .social:hover::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-repeat: no-repeat;
-  background-size: contain;
-  opacity: 1;
-  -webkit-transition: opacity 0.5s ease;
-  transition: opacity 0.5s ease;
-}
-.icons .social.google:hover::before {
-  background-image: url("images/google-hover.svg");
-}
-.icons .social.github:hover::before {
-  background-image: url("images/github-hover.svg");
-}
-.icons .social.fb:hover::before {
-  background-image: url("images/fb-hover.svg");
-}
-.icons .social.vk:hover::before {
-  background-image: url("images/vk-hover.svg");
-}
-.icons .social:hover img {
-  opacity: 0;
+.icons .social:hover {
+  -webkit-filter: brightness(50%);
+          filter: brightness(50%);
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
 }
 
 .or {
